# knfancurve

./: CMakeLists.txt  CategoriesWidget.cpp  CategoriesWidget.h  CategoriesWidget.ui  ChartRepainter.cpp  ChartRepainter.h  ChartWrapper.cpp  ChartWrapper.h  ChartWrapper.ui  ChartsWidget.cpp  ChartsWidget.h  ChartsWidget.ui  Dockerfile  GPU.cpp  GPU.h  GPUHelpers.cpp  GPUStatsModel.cpp  GPUStatsModel.h  IntRangeLineEdit.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MiscHelpers.cpp  QutieHelpers.cpp  QutieHelpers.h  SMI.cpp  SMI.h  SettingsFrame.cpp  SettingsFrame.h  SettingsFrame.ui  app.qrc  categories.cpp  categories.h  categories.ui  dia.cpp  dia.h  dia.ui  diaform.cpp  diaform.h  (+32 more)
.github/workflows/: main.yml
